== 0.3.0

* Enhancements
  * Applicants now fall into either "predoc", "postdoc", or "summer" categories
  * Use new Contour login attributes on Registration page
  * Use Contour for User account Confirmations and Unlocks

== 0.2.0

* Enhancements
  * Dashboard with quick applicant statistics added
  * Applicant page restructured
    * General Information
    * Contact Information
    * Education Information
    * Predoc and Postdoc section (general)
    * Trainee section
    * Administrative section
  * Applicants
    * List of applicants now utilizes a frozen header row
    * Added marital status
    * Add submitted at timestamp
    * Applicant Number renamed to CV Number
    * Reference number is now generated for each application
  * Login and Registration
    * Adminstrator Role added for management of applicants and preceptors
    * Applicants can now register and login to create an application
    * Preceptors can now login to edit their information
  * Administrators
    * Can send emails to applicants and preceptors to notify them to update their information
  * Using Contour 1.0.0 with Twitter-Bootstrap

== 0.1.0

* Enhancements
  * Preceptors can now be managed
  * Applicants (Predoc and Postdoc) and Trainees can now be managed

== 0.0.0

* Skeleton files to initialize Rails application with testing framework and continuous integration