@@ -11,7 +11,10 @@ class Applicant < ActiveRecord::Base
                   :current_title, :cv, :degree_sought, :degree_type, :degrees, :department_program, :disabled, :disadvantaged, :enrolled, :expected_year, :first_name, :last_name,
                   :middle_initial, :notes, :offered, :phone, :preferred_preceptor_id, :presentations, :previous_institutions, :primary_preceptor_id, :pubs_not_prev_rep, :research_description,
                   :research_project_title, :residency, :review_date, :reviewed, :secondary_preceptor_id, :source_of_support, :state, :status, :supported_by_tg, :training_grant_years, :tge, :thesis,
-                  :trainee_code, :training_period_end_date, :training_period_start_date, :urm, :year, :year_department_program, :zip_code, :desired_start_date, :marital_status, :assurance, :reference_number
+                  :trainee_code, :training_period_end_date, :training_period_start_date, :urm, :year, :year_department_program, :zip_code, :desired_start_date, :marital_status, :assurance, :reference_number,
+                  :personal_statement, :publish
+
+  attr_accessor :publish
 
   STATUS = ["current", "former"].collect{|i| [i,i]}
   APPLICANT_TYPE = ["predoc", "postdoc", "summer"].collect{|i| [i,i]}
@@ -41,6 +44,11 @@ class Applicant < ActiveRecord::Base
     super and not self.deleted?
   end
 
+  def after_token_authentication
+    self.reset_authentication_token!
+    super
+  end
+
   def name
     "#{first_name} #{middle_initial} #{last_name}"
   end
@@ -54,7 +62,7 @@ class Applicant < ActiveRecord::Base
   end
 
   def set_submitted_at
-    self.submitted_at = Time.now if self.respond_to?('reference_number') and self.assurance and self.submitted_at.blank?
+    self.submitted_at = Time.now if self.respond_to?('submitted_at') and self.publish.to_s == '1' and self.submitted_at.blank?
   end
 
   def set_reference_number(new_reference_number = Digest::SHA1.hexdigest(Time.now.usec.to_s))
