@@ -2,16 +2,15 @@
 <div class="page-header">
   <h1>
     <%= @title %>
-    <%= link_to "Edit Application", edit_me_applicants_path, class: 'btn btn-mini' unless current_applicant.assurance? %>
+    <%= link_to "Edit Application", edit_me_applicants_path, class: 'btn btn-mini' if current_applicant.submitted_at.blank? %>
   </h1>
 </div>
 
-<% if current_applicant.assurance? %>
+<% unless current_applicant.submitted_at.blank? %>
   <div class="hero-unit">
     <h1>Congratulations!
       <small>Your application was submitted <span style="background-color: #baffba;" class="tag_bubble"><%= simple_time current_applicant.submitted_at %></span>!</small>
     </h1>
-
   </div>
 <% end %>
 
