@@ -15,4 +15,7 @@
 
   <dt>Desired start date</dt>
   <dd><%= applicant.desired_start_date %></dd>
+
+  <dt>Personal statement</dt>
+  <dd><%= applicant.personal_statement %></dd>
 </dl>
