@@ -14,7 +14,8 @@ files = [['config','database.yml'],
   ['config/initializers', 'secret_token.rb'],
   ['config/initializers', '00_site_name.rb'],
   ['config/initializers', 'devise.rb'],
-  ['config/initializers', 'omniauth.rb']]
+  ['config/initializers', 'omniauth.rb'],
+  ['config/initializers', 'contact_info.rb']]
 
 files.each do |folder_name, file_name|
   file_template = File.join(template_folder, file_name + '.erb')
