@@ -1,0 +1,4 @@
+# This file is meant to define a default contact email and address for the Training Grant Program Administrator
+
+TG_ADMIN_EMAIL = ""
+TG_ADMIN_ADDRESS = ""
