@@ -1,7 +1,14 @@
 require 'test_helper'
 
 class SitesControllerTest < ActionController::TestCase
-  # test "the truth" do
-  #   assert true
-  # end
+
+  setup do
+    login(users(:administrator))
+  end
+
+  test "should get index" do
+    get :dashboard
+    assert_response :success
+  end
+
 end
